<resources>
    <string name="app_name">Mala3b</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="login_now">Login now</string>

    <string name="Playground_Description">Playground Description</string>
    <string name="staduim_name">Staduim Name</string>
    <string name="staduim_address">Staduim Address</string>
    <string name="next">Next</string>


    <string-array name="staduim_size">
        <item>3X3</item>
        <item>4X4</item>
        <item>5X5</item>
        <item>6X6</item>
        <item>8X8</item>
        <item>11X11</item>
    </string-array>

    <string-array name="staduim_type">
        <item>grass</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_stadium">Add Stadium</string>
    <string name="save_changes">Save</string>
    <string name="pleaseOpenGPS">Please Open GPS</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_detected_address">No Detected Address</string>
    <string name="requiredField">Required Field</string>
    <string name="takephoto">Take Photo</string>
    <string name="choosegallery">Choose From Gallery</string>
    <string name="cancel_dialog">Cancel Dialog</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="feature">Feature</string>
    <string name="phone">Phone</string>
    <string name="required_field">Required Field</string>
    <string name="enter_code">Enter the activation code sent to the number</string>
    <string name="resend_activation_code"><u>Resend activation code</u></string>
    <string name="confirm">Confirm</string>
    <string name="enter_validate">Enter valid code !</string>
    <string name="reservations">Reservations</string>
    <string name="add_stad">Add Stadium</string>
    <string name="good">Good</string>
    <string name="profile">Profile</string>
    <string name="staduim_name_EN">Sadium Name English</string>
    <string name="staduim_name_AR">Stadium Name Arabic</string>
    <string name="manger">Manger</string>
    <string name="palyer">Player</string>
    <string name="select_role"><u>Select Role</u></string>
    <string name="stadium">Stadium</string>

</resources>
