<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:fillViewport="true"
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MangerPackage.StadiumPackage.AddStadiumPackage.AddStadiumActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/image"
                android:layout_margin="10dp"
                android:background="@drawable/shape_feature_selected"
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/stadiumPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

                <ImageView
                    android:src="@drawable/ic_plus"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recylePhotos"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:text="@string/Playground_Description"
                />

            <EditText
                android:id="@+id/stadiumName"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:hint="@string/staduim_name"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_edittext_border"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <TextView
                android:id="@+id/stadiumAddress"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"
                android:gravity="center|start"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:hint="@string/staduim_address"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_edittext_border"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <Spinner
                android:id="@+id/spinnerSize"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_edittext_border"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <Spinner
                android:id="@+id/spinnerType"
                android:gravity="center|start"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:hint="@string/staduim_address"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_edittext_border"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnNext"
                    android:layout_margin="10dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/next"
                    android:layout_alignParentBottom="true"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:background="@drawable/shape_button_green"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>